[workspace]
resolver = "3"
members = [
    "bin/chat",
    "bin/relay", 
    "moqt-rs", 
    "varintege-rs",
    "varintege-rs/varint_core", 
    "varintege-rs/varint_derive",
]

[workspace.dependencies]
# TODO add bon where ever it makes sense
clap = { version = "4.5.51", features = ["derive"] }
bon = "3.8.1"
bytes = "1.11"
indexmap = "2.12.0"
paste = "1"
pretty_assertions = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
