[package]
name = "moqt-rs"
version = "0.0.1"
edition = "2024"
categories = ["web-programming", "data-structures"]
keywords = ["QUIC", "WebTransport", "MOQT"]
description = "VarInt derive implementation"
homepage = "https://github.com/ArckyPN/media-over-quic-transport/"
repository = "https://github.com/ArckyPN/media-over-quic-transport/tree/main/moqt-rs"
license = "MIT"
readme = "README.md"

[dependencies]
indexmap = { workspace = true }
paste = "1"
pretty_assertions = { workspace = true }
snafu = { workspace = true }
url = "2.5.7"
varint = { path = "../varintege-rs", features = ["moq"], package = "varintege-rs" }