[package]
name = "varint_derive"
version = "0.0.1"
edition = "2024"
categories = ["web-programming", "data-structures"]
keywords = ["QUIC", "VarInt", "derive", "MOQT"]
description = "VarInt derive implementation"
homepage = "https://github.com/ArckyPN/media-over-quic-transport/"
repository = "https://github.com/ArckyPN/media-over-quic-transport/tree/main/varint_derive"
license = "MIT"
readme = "README.md"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }

varint_core = { path = "../varint_core" }

[lib]
proc-macro = true
