[package]
name = "varintege-rs"
version = "0.0.1"
edition = "2024"
categories = ["web-programming", "data-structures"]
keywords = ["QUIC", "VarInt", "derive", "MOQT"]
description = "VarInt derive implementation"
homepage = "https://github.com/ArckyPN/media-over-quic-transport/"
license = "MIT"
readme = "README.md"

[dependencies]
