[package]
name = "varintege-rs"
version = "0.0.1"
edition = "2024"
categories = ["web-programming", "data-structures"]
keywords = ["QUIC", "VarInt", "derive", "MOQT"]
description = "VarInt derive implementation"
homepage = "https://github.com/ArckyPN/media-over-quic-transport/"
repository = "https://github.com/ArckyPN/media-over-quic-transport/tree/main/varintege-rs"
license = "MIT"
readme = "README.md"

[features]
moq = ["varint_core/moq"]

[dependencies]
funty.workspace = true
snafu.workspace = true

varint_core = { path = "varint_core" }
varint_derive = { path = "varint_derive" }
