[package]
name = "varint_derive"
version = "0.0.1"
edition = "2024"
categories = ["web-programming", "data-structures"]
keywords = ["QUIC", "VarInt", "derive", "MOQT"]
description = "VarInt derive implementation"
homepage = "https://github.com/ArckyPN/media-over-quic-transport/"
repository = "https://github.com/ArckyPN/media-over-quic-transport/tree/main/varint_derive"
license = "MIT"
readme = "README.md"

# TODO moq feature

[dependencies]
darling = "0.21.3"
paste.workspace = true
pretty_assertions.workspace = true
proc-macro2 = "1"
proc-macro-error2 = "2.0.1"
quote = "1"
snafu.workspace = true
syn = { version = "2" }

varint_core = { path = "../varint_core" }

# TODO only for moq feature
convert_case = "0.8"

proc-macro-crate = "3.4.0"

[lib]
proc-macro = true
